# mcp-devsecops-lab

./: .gitignore  GLOSARIO.md  pyproject.toml
.github/workflows/: close-stale-gitops-prs.yml  devsecops-pipeline.yml  devsecops-reusable.yml  microservice-ci.yml
microservice/: Dockerfile  app.py  requirements.txt
microservice/helm/ms-devsecops/: Chart.yaml  values.yaml
microservice/helm/ms-devsecops/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
server/: config.py  main.py
server/tools/: argocd.py  github_actions.py  health.py  microservice.py  observability.py
